@@ -7,16 +7,16 @@ plugins {
 }
 
 group = "io.github.cloudate9.lifesteal"
-version = "1.3.1"
+version = "1.4.0"
 
 repositories {
-    maven("https://nexus.sirblobman.xyz/repository/public/")
+    maven("https://repo.mattstudios.me/artifactory/public/")
     mavenCentral()
     papermc()
 }
 
 dependencies {
-    compileOnly("com.github.sirblobman.combatlogx:api:11.0.0.0-SNAPSHOT")
+    implementation("dev.triumphteam:triumph-gui:3.1.2")
     compileOnly("io.papermc.paper:paper-api:1.18.2-R0.1-SNAPSHOT")
 }
 
@@ -29,9 +29,27 @@ tasks {
         options.release.set(17)
     }
 
+    prepareSpigotPlugins {
+        setDependsOn(mutableListOf(shadowJar.get()))
+    }
+
+    runSpigot {
+        jvmArgs = mutableListOf(
+            "-Xmx2G",
+            "-Xms2G",
+            "-XX:+UseZGC",
+            "-XX:+ZUncommit",
+            "-XX:ZUncommitDelay=3600",
+            "-XX:+ZProactive",
+            "-XX:+AlwaysPreTouch",
+            "-XX:+DisableExplicitGC",
+        )
+    }
+
     shadowJar {
         archiveFileName.set(rootProject.name + "-" + rootProject.version + ".jar")
-        relocate("kotlin", "io.github.cloudate9.lifesteal.dependencies")
+        relocate("dev.triumphteam.gui", "$group.dependencies.gui")
+        relocate("kotlin", "$group.dependencies.kotlin")
     }
 }
 
@@ -39,12 +57,16 @@ spigot {
     authors = listOf("Cloudate9")
     apiVersion = "1.18"
     description = "A personal version of LifeSteal SMP"
-    depends("CombatLogX")
 
     commands {
-        create("withdraw") {
-            description = "Withdraw hearts."
-            usage = "/withdraw <number of hearts>"
+        create("hearts") {
+            description = "Set, add, or remove hearts."
+            usage = "/hearts add/remove/set <number of hearts>"
+        }
+
+        create("lootbox") {
+            description = "Do the server lootbox thing"
+            usage = "/lootbox new/status"
         }
 
         create("revive") {
@@ -52,9 +74,9 @@ spigot {
             usage = "/revive <player>"
         }
 
-        create("restore") {
-            description = "Restore back to 10 hearts"
-            usage = "/restore <name of player>"
+        create("withdraw") {
+            description = "Withdraw hearts."
+            usage = "/withdraw <number of hearts>"
         }
     }
 
@@ -62,6 +84,16 @@ spigot {
         create("lifesteal.admin") {
             description = "Gives admin permission for lifesteal."
             defaults = "op"
+        }
+
+        create("lifesteal.lootbox.new") {
+            description = "Gives permission to create a new loot box."
+            defaults = "op"
+        }
+
+        create("lifesteal.lootbox.status") {
+            description = "Gives permission to view the cords of a loot box."
+            defaults = "true"
         }
 
         create("lifesteal.revive") {
